# ailove

./: .env.example  .gitignore  README-PRD1.md  README.md  SETUP.md  jest.config.js  next.config.mjs  package-lock.json  package.json  pyproject.toml  server.js  tsconfig.json
prisma/: schema.prisma
prisma/migrations/20251029193948_init_schema/: migration.sql
prisma/migrations/20251029202442_add_realtime_messaging/: migration.sql
prisma/migrations/20251029205102_enhance_date_model/: migration.sql
scripts/: seed.ts
src/: index.ts
src/app/: layout.tsx  page.tsx
src/app/api/health/: route.ts
src/config/: index.ts
src/lib/repositories/: CacheRepository.ts  DateRepository.ts  MatchRepository.ts  MessageRepository.ts  TraitRepository.ts  UserRepository.ts
src/lib/services/: AICoachingService.ts  AuthService.ts  CausalUpliftService.ts  DateCoordinationService.ts  EmbeddingService.ts  GrokService.ts  InformationGainService.ts  MessagingService.ts  QdrantService.ts  RBSService.ts  SafetyConstraintsService.ts  SubspaceResonanceService.ts
src/lib/types/: rbs.types.ts
src/lib/utils/: api-response.ts  auth.ts  middleware.ts
src/lib/websocket/: server.ts
tests/api/: auth.test.ts  matches.test.ts
tests/integration/: UserRepository.test.ts
tests/phase2-validation/: .complete  coaching-endpoints-test-results.md  edge-cases-summary.md  messaging-edge-cases-test-results.md
tests/unit/: CausalUpliftService.test.ts  GrokService.test.ts  InformationGainService.test.ts  RBSService.test.ts  SafetyConstraintsService.test.ts  SubspaceResonanceService.test.ts
(+22 files in other folders)
